--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,8 +33,8 @@
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>330</y>
+      <x>140</x>
+      <y>0</y>
       <width>321</width>
       <height>41</height>
      </rect>
@@ -156,6 +156,21 @@
     <property name="text">
      <string>Run in Background?</string>
     </property>
+   </widget>
+   <widget class="QTreeWidget" name="treeWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>340</y>
+      <width>781</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string notr="true">1</string>
+     </property>
+    </column>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
