--- a/settings.ui
+++ b/settings.ui
@@ -61,32 +61,32 @@
     </rect>
    </property>
    <property name="title">
-    <string>Enable Monitoring ?</string>
+    <string>Enable Monitoring?</string>
    </property>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0" colspan="2">
-     <widget class="QCheckBox" name="bgCheckBox">
+     <widget class="QCheckBox" name="downCheckBox">
       <property name="text">
        <string>Downloads</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0" colspan="2">
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QCheckBox" name="picCheckBox">
       <property name="text">
        <string>Pictures</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0" colspan="2">
-     <widget class="QCheckBox" name="checkBox_2">
+     <widget class="QCheckBox" name="deskCheckBox">
       <property name="text">
        <string>Desktop</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
-     <widget class="QCheckBox" name="checkBox_3">
+     <widget class="QCheckBox" name="docCheckBox">
       <property name="text">
        <string>Documents</string>
       </property>
